View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025937 | Community | OCCT:Modeling Algorithms | public | 2015-03-14 17:33 | 2015-05-14 16:31 |
Reporter | Vico Liang | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2013 | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025937: Failed Cut Edge or Face by HalfSpace. | ||||
Description | Cutting any edges or faces by HalfSpace result in empty shapes. code snippet: gp_Pln aPlane(aSplitPlane); BRepBuilderAPI_MakeFace aMakeFace(aPlane); const TopoDS_Face& aFade = aMakeFace.Face(); BRepPrimAPI_MakeHalfSpace aMakeHalfSpace(aFade, aFencePoint); const TopoDS_Solid& aSolid = aMakeHalfSpace.Solid(); Handle_RBGMShape_Maker aBlankObj = ...; BRepAlgoAPI_Cut aMakeCut(aBlankShape, aSolid); | ||||
Steps To Reproduce | # Cut a wire by halfspace plane h 0 0 0 1 0 0 mkface h h halfspace h h 10 0 0 polyline a -10 -10 0 10 -10 0 10 10 0 -10 10 0 -10 -10 0 bop a h bopcut r # error: r is split but the overall form remains as of a # Cut a face by halfspace plane h 0 0 0 1 0 0 mkface h h halfspace h h 10 0 0 plane a 0 0 0 0 0 1 mkface a a -10 10 -10 10 bop a h bopcut r # error: r is empty # Cut a solid by halfspace plane h 0 0 0 1 0 0 mkface h h halfspace h h 10 0 0 box a -10 -10 0 20 20 10 bop a h bopcut r # Good result | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6(011) bug25937_1, bug25937_2, bug25937_3 | ||||
|
Branch CR25937 has been created by pkv. SHA-1: 41ed1ed236697e106b6be4c3d2e4e588f10c883d No new revisions were added by this update. |
|
Branch CR25937 has been updated by pkv. SHA-1: 36b2e8a686240de8b10cab63677c8c7ba7c52d6a Detailed log of new commits: Author: pkv Date: Thu Apr 9 11:51:46 2015 +0300 0025937: Failed Cut Edge or Face by HalfSpace. I. New features: I.1. class IntTools_Context - method: Bnd_Box& IntTools_Context::BndBox (const TopoDS_Shape& theS) has been added. The method returns a reference to bounding box for the shape <theS>. - method: Standard_Boolean IntTools_Context::IsInfiniteFace (const TopoDS_Face& theFace) has been added. The method returns true if the face <theFace> has infinite bounds. II. Changes: II.1. class BOPAlgo_BuilderFace - method: void BOPAlgo_BuilderFace::PerformAreas() has been changed to include unrestricted faces in the list of areas. II.2. class BOPAlgo_BuilderSolid - method: void BOPAlgo_BuilderSolid::PerformLoops() has been changed to include unrestricted faces in the list of loops. II.3. class IntTools_Context - method: IntTools_Context::~IntTools_Context() has been changed to provide the correspondence with I.1 III. Modified entities: packages: IntTools BOPAlgo |
|
Git branch CR25937 is ready to be reviewed. |
|
Reviewed. |
|
Branch CR25937 has been updated forcibly by mkv. SHA-1: 7ea80fc6704f02d619534d1954894f7d8bd94818 |
|
Dear BugMaster, Branch CR25937 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR25937 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 7ea80fc6704f02d619534d1954894f7d8bd94818 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR25937-master-occt-64/Debian60-64/boolean/bcut_complex/O7.html http://occt-tests/CR25937-master-occt-64/Windows-64-VC10/boolean/bcut_complex/O7.html boolean bcut_complex(012) O7: FAILED Testing cases: http://occt-tests/CR25937-master-occt-64/Debian60-64/bugs/modalg_6/bug25937_1.html http://occt-tests/CR25937-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug25937_1.html bugs modalg_6(011) bug25937_1: OK http://occt-tests/CR25937-master-occt-64/Debian60-64/bugs/modalg_6/bug25937_2.html http://occt-tests/CR25937-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug25937_2.html bugs modalg_6(011) bug25937_2: OK http://occt-tests/CR25937-master-occt-64/Debian60-64/bugs/modalg_6/bug25937_3.html http://occt-tests/CR25937-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug25937_3.html bugs modalg_6(011) bug25937_3: OK Testing on Linux: occt component : Total MEMORY difference: 93991383 / 94311053 [-0.34%] Total CPU difference: 56612.499999999265 / 56190.70999999969 [+0.75%] products component : Total MEMORY difference: 23676561 / 23680234 [-0.02%] Total CPU difference: 18641.62999999999 / 19038.489999999965 [-2.08%] Testing on Windows: occt component : Total MEMORY difference: 57123030 / 57123513 [-0.00%] Total CPU difference: 15808.314534699066 / 15975.8752087989 [-1.05%] products component : Total MEMORY difference: 15476992 / 15478724 [-0.01%] Total CPU difference: 6270.569395699971 / 6217.388654799964 [+0.86%] There are no differences in images found by testdiff. |
|
Branch CR25937 has been updated by mkv. SHA-1: 401d50794ab5b822154d022afe00e98e42ca0b18 Detailed log of new commits: Author: mkv Date: Thu Apr 16 15:21:37 2015 +0300 Test casesfor issue CR25937 |
|
Dear pkv, could you please review following test case bugs modalg_6(011) bug25937_1, bug25937_2, bug25937_3 |
|
Branch CR25937_1 has been created by pkv. SHA-1: 43ebf89c220b4bbbabdf78ccb907f3b0b594e789 No new revisions were added by this update. |
|
Branch CR25937_1 has been updated by pkv. SHA-1: 46fd818d82bbfe9e1a3f0113f5b55cfa28c7f16b Detailed log of new commits: Author: pkv Date: Fri Apr 17 08:43:58 2015 +0300 0025937: Failed Cut Edge or Face by HalfSpace. Typos have been corrected |
|
Git branch CR25937_1 is ready to review. |
|
The test cases: bugs modalg_6(011) bug25937_1, bug25937_2, bug25937_3 are OK. |
|
The case: boolean bcut_complex(012) O7 has the problems mentioned in: http://tracker.dev.opencascade.org/view.php?id=22033#c21345 The case should not be considered as a regression. |
|
Reviewed. |
|
Branch CR25937_1 has been updated forcibly by mkv. SHA-1: f83337ef37587745522ab7e875ffed5e825f53f2 |
|
Dear BugMaster, Branch CR25937_1 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR25937_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: f83337ef37587745522ab7e875ffed5e825f53f2 Number of compiler warnings: occt component : Linux: 22 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) There are new additional compilation warnings on Linux platform: http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR25937-1-master_build_occt_linux/1/warnings17Result/package.1291197015/ IntTools_Context.cxx:49, GNU C Compiler 4 (gcc), Priority: Normal when initialized here IntTools_Context.cxx:67, GNU C Compiler 4 (gcc), Priority: Normal when initialized here http://jenkins-test-01.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_17008/job/CR25937-1-master_build_occt_linux/1/warnings17Result/package.-671474530/file.544448743/ IntTools_Context.hxx:218, GNU C Compiler 4 (gcc), Priority: Normal ‘Standard_Integer IntTools_Context::myCreateFlag’ IntTools_Context.hxx:219, GNU C Compiler 4 (gcc), Priority: Normal ‘IntTools_Context::myBndBoxDataMap’ will be initialized after |
|
Branch CR25937_2 has been created by pkv. SHA-1: 699239e457ebf500b50fff8cc9d10cbc870563b2 No new revisions were added by this update. |
|
Branch CR25937_2 has been updated by pkv. SHA-1: d57a00262aa41f8b91c895c856d46194e77f1396 Detailed log of new commits: Author: pkv Date: Thu Apr 23 07:44:21 2015 +0300 0025937: Failed Cut Edge or Face by HalfSpace. Addressing the causes of warnings. |
|
Dear mkv, The branch CR25937_2 contains corrections that addressing the causes of warnings. Could you please test the branch CR25937_2 |
|
Branch CR25937_2 has been updated forcibly by mkv. SHA-1: edd51999a2936ce4633099e74864a995096af463 |
|
Dear BugMaster, Branch CR25937_2 was rebased on current master of occt git-repository. SHA-1: edd51999a2936ce4633099e74864a995096af463 |
|
Dear BugMaster, Branch CR25937_2 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: edd51999a2936ce4633099e74864a995096af463 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR25937-2-master-occt-64/Debian60-64/boolean/bcut_complex/O7.html http://occt-tests/CR25937-2-master-occt-64/Windows-64-VC10/boolean/bcut_complex/O7.html boolean bcut_complex(012) O7: FAILED Testing cases: http://occt-tests/CR25937-2-master-occt-64/Debian60-64/bugs/modalg_6/bug25937_1.html http://occt-tests/CR25937-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug25937_1.html bugs modalg_6(011) bug25937_1: OK http://occt-tests/CR25937-2-master-occt-64/Debian60-64/bugs/modalg_6/bug25937_2.html http://occt-tests/CR25937-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug25937_2.html bugs modalg_6(011) bug25937_2: OK http://occt-tests/CR25937-2-master-occt-64/Debian60-64/bugs/modalg_6/bug25937_3.html http://occt-tests/CR25937-2-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug25937_3.html bugs modalg_6(011) bug25937_3: OK Testing on Linux: occt component : Total MEMORY difference: 95128879 / 94580870 [+0.58%] Total CPU difference: 57123.60999999926 / 51015.60999999946 [+11.97%] products component : Total MEMORY difference: 23739534 / 23762982 [-0.10%] Total CPU difference: 17698.92999999997 / 17125.389999999956 [+3.35%] Testing on Windows: occt component : Total MEMORY difference: 57252200 / 57264067 [-0.02%] Total CPU difference: 15799.812480199209 / 15810.514148798971 [-0.07%] products component : Total MEMORY difference: 15601925 / 15605919 [-0.03%] Total CPU difference: 6286.590698399972 / 6275.40542669997 [+0.18%] There are no differences in images found by testdiff. |
|
Branch CR25937_2 has been updated by mkv. SHA-1: 842fc78effc2a2f5d32b48b463ddcfff65df805b Detailed log of new commits: Author: mkv Date: Mon Apr 27 17:07:37 2015 +0300 Test cases for issue CR25937 |
|
Dear BugMaster, test case boolean bcut_complex(012) O7 was corrected and pushed to branch CR25937_2 of occt git-repository. Now it is OK. |
|
Branch CR25937 has been deleted by inv. SHA-1: 401d50794ab5b822154d022afe00e98e42ca0b18 |
|
Branch CR25937_1 has been deleted by inv. SHA-1: f83337ef37587745522ab7e875ffed5e825f53f2 |
|
Branch CR25937_2 has been deleted by inv. SHA-1: 842fc78effc2a2f5d32b48b463ddcfff65df805b |
occt: master f47b8d2b 2015-04-30 10:49:25
Committer: bugmaster Details Diff |
0025937: Failed Cut Edge or Face by HalfSpace. Addressing the causes of warnings. Test cases for issue CR25937 |
Affected Issues 0025937 |
|
mod - src/BOPAlgo/BOPAlgo_BuilderFace.cxx | Diff File | ||
mod - src/BOPAlgo/BOPAlgo_BuilderSolid.cxx | Diff File | ||
mod - src/IntTools/IntTools_Context.cdl | Diff File | ||
mod - src/IntTools/IntTools_Context.cxx | Diff File | ||
add - tests/bugs/modalg_6/bug25937_1 | Diff File | ||
add - tests/bugs/modalg_6/bug25937_2 | Diff File | ||
add - tests/bugs/modalg_6/bug25937_3 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-14 17:33 | Vico Liang | New Issue | |
2015-03-14 17:33 | Vico Liang | Assigned To | => msv |
2015-03-14 20:31 |
|
Steps to Reproduce Updated | |
2015-03-14 20:33 |
|
Assigned To | msv => pkv |
2015-03-14 20:33 |
|
Status | new => assigned |
2015-03-16 05:24 | Vico Liang | Relationship added | related to 0025941 |
2015-03-17 13:55 |
|
Target Version | 6.8.0 => 6.9.0 |
2015-04-09 11:22 | git | Note Added: 0039471 | |
2015-04-09 11:51 | git | Note Added: 0039476 | |
2015-04-09 11:53 |
|
Status | assigned => resolved |
2015-04-09 11:53 |
|
Note Added: 0039477 | |
2015-04-09 11:55 |
|
Assigned To | pkv => emv |
2015-04-10 08:27 |
|
Note Added: 0039542 | |
2015-04-10 08:27 |
|
Assigned To | emv => mkv |
2015-04-10 08:27 |
|
Status | resolved => reviewed |
2015-04-15 18:37 | git | Note Added: 0039807 | |
2015-04-16 15:21 |
|
Note Added: 0039886 | |
2015-04-16 15:22 |
|
Note Added: 0039887 | |
2015-04-16 15:22 | git | Note Added: 0039888 | |
2015-04-16 15:23 |
|
Note Added: 0039889 | |
2015-04-16 15:23 |
|
Assigned To | mkv => pkv |
2015-04-16 15:23 |
|
Status | reviewed => assigned |
2015-04-16 15:23 |
|
Test case number | => bugs modalg_6(011) bug25937_1, bug25937_2, bug25937_3 |
2015-04-17 08:32 | git | Note Added: 0039931 | |
2015-04-17 08:44 | git | Note Added: 0039933 | |
2015-04-17 08:46 |
|
Status | assigned => resolved |
2015-04-17 08:47 |
|
Note Added: 0039934 | |
2015-04-17 08:47 |
|
Assigned To | pkv => emv |
2015-04-17 08:48 |
|
Note Added: 0039935 | |
2015-04-17 08:52 |
|
Note Added: 0039936 | |
2015-04-17 08:52 |
|
Note Edited: 0039936 | |
2015-04-17 10:24 |
|
Note Added: 0039942 | |
2015-04-17 10:24 |
|
Assigned To | emv => mkv |
2015-04-17 10:24 |
|
Status | resolved => reviewed |
2015-04-17 18:24 | git | Note Added: 0039991 | |
2015-04-22 19:50 |
|
Note Added: 0040133 | |
2015-04-22 19:51 |
|
Note Added: 0040134 | |
2015-04-22 19:51 |
|
Assigned To | mkv => pkv |
2015-04-22 19:51 |
|
Status | reviewed => assigned |
2015-04-23 07:36 | git | Note Added: 0040141 | |
2015-04-23 07:44 | git | Note Added: 0040143 | |
2015-04-23 07:48 |
|
Note Added: 0040144 | |
2015-04-23 07:49 |
|
Assigned To | pkv => mkv |
2015-04-24 07:00 |
|
Status | assigned => feedback |
2015-04-24 16:13 |
|
Assigned To | mkv => Vico Liang |
2015-04-24 16:14 |
|
Assigned To | Vico Liang => mkv |
2015-04-24 18:15 | git | Note Added: 0040235 | |
2015-04-27 17:07 |
|
Note Added: 0040293 | |
2015-04-27 17:08 |
|
Note Added: 0040294 | |
2015-04-27 17:09 | git | Note Added: 0040295 | |
2015-04-27 17:09 |
|
Note Added: 0040296 | |
2015-04-27 17:09 |
|
Assigned To | mkv => bugmaster |
2015-04-27 17:09 |
|
Status | feedback => tested |
2015-04-28 15:10 |
|
Relationship deleted | related to 0025941 |
2015-04-28 15:10 |
|
Relationship added | has duplicate 0025941 |
2015-05-07 11:18 | bugmaster | Changeset attached | => occt master f47b8d2b |
2015-05-07 11:18 | bugmaster | Status | tested => verified |
2015-05-07 11:18 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:30 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:31 | git | Note Added: 0041028 | |
2015-05-14 16:31 | git | Note Added: 0041029 | |
2015-05-14 16:31 | git | Note Added: 0041030 |