0025937: Failed Cut Edge or Face by HalfSpace.

Addressing the causes of warnings.

Test cases for issue CR25937